<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:weightSum="1"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/textViewAboutDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/tituloabout"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/md_text" />

    <TextView
        android:id="@+id/textViewAboutDialogDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/about"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/md_secondary_text_icons" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_row="2"
        android:autoLink="web"
        android:text="@string/github"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="?attr/colorAccent"
        android:textColorLink="?attr/colorAccent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.54">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloversion"
            android:id="@+id/tituloversion"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="25dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/md_secondary_text_icons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_marginLeft="10dp"
            android:text="@string/version"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="14sp"
            android:textColor="@color/md_secondary_text_icons"
            android:id="@+id/numVersion"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tituloversion"
            android:width="135dp" />

    </RelativeLayout>

</LinearLayout>